--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@vercel/analytics": "^1.3.1",
     "axios": "^1.7.7",
+    "framer-motion": "^11.11.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
     "openai": "^4.67.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-highlight": "^0.15.0"
   },
   "devDependencies": {
     "eslint": "^8",
