--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.10.3",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@vercel/analytics": "^1.3.1",
     "axios": "^1.7.7",
-    "framer-motion": "^11.11.1",
+    "framer-motion": "^11.11.9",
     "lodash": "^4.17.21",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
